src/objects/Submissions__c.object
<CustomObject>
    <fields>
        <fullName>CC_Active_RE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CC Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Created_Date_RE__c</fullName>
        <label>CC Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CC_Document_Type__c</fullName>
        <label>CC Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Input_Referees_RE__c</fullName>
        <label>CC Input Referees</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Organization_Name__c</fullName>
        <label>CC Organization Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Submission_ID_RE__c</fullName>
        <externalId>true</externalId>
        <label>CC Submission ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Submission_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>CC Submission ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CC_Username_RE__c</fullName>
        <label>CC Username</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_ID__c</fullName>
        <label>Location ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_ID__c</fullName>
        <label>Organization ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Parent_ID__c</fullName>
        <label>Organization Parent ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_RE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Submissions as Organization</relationshipLabel>
        <relationshipName>Submissions_as_Organization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Organization_RE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Submissions as Parent Org</relationshipLabel>
        <relationshipName>Submissions_as_Parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Practice_Area_ID__c</fullName>
        <label>Practice Area ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_Area__c</fullName>
        <label>Practice Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_ID__c</fullName>
        <label>Publication ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Name__c</fullName>
        <label>Publication Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Type_ID__c</fullName>
        <label>Publication Type ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Type__c</fullName>
        <label>Publication Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Submission_Type__c</fullName>
        <label>Submission Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subsection_ID__c</fullName>
        <label>Subsection ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subsection_Type__c</fullName>
        <label>Subsection Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Issue__c</fullName>
        <label>Year (Issue)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Submission</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Organization_RE__c</columns>
        <columns>Publication__c</columns>
        <columns>Practice_Area__c</columns>
        <columns>Location__c</columns>
        <columns>Publication_Type__c</columns>
        <columns>Year_Issue__c</columns>
        <columns>Submission_Type__c</columns>
        <columns>CC_Organization_Name__c</columns>
        <columns>Parent_Organization_RE__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>X2018_Submissions_with_Accounts</fullName>
        <columns>NAME</columns>
        <columns>Organization_RE__c</columns>
        <columns>Publication__c</columns>
        <columns>Practice_Area__c</columns>
        <columns>Location__c</columns>
        <columns>Publication_Type__c</columns>
        <columns>Year_Issue__c</columns>
        <columns>Submission_Type__c</columns>
        <columns>Parent_Organization_RE__c</columns>
        <columns>Subsection_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Organization_RE__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Year_Issue__c</field>
            <operation>equals</operation>
            <value>2019</value>
        </filters>
        <label>2019 Submissions with Accounts</label>
    </listViews>
    <nameField>
        <displayFormat>Sub-{0}</displayFormat>
        <label>Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>